<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quick Circle Themer</string>
    <string name="title_activity_quickcirclemod_settings">Quick Circle Themer</string>
    <string name="action_import">Import</string>
    <string name="action_delete">Delete</string>
    <string name="reboot">Reboot now</string>
    <string name="apply">Apply</string>
    <string name="later">Reboot later</string>
    <string name="apply_theme">Apply theme</string>
    <string name="apply_theme_text" >Please reboot to apply changes.\nQuick Circle Themes can try to apply the changes without a reboot. Pleas keep in mind that this feature is highly experimental and may cause instabilities. If you encounter any Problems please reboot.
    </string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="active_theme">Active Theme</string>
    <string name="no_watchfaces">No Watchfaces installed\nUse the import button to import new watchfaces</string>
    <string name="err_no_xml">Zip file doesn\'t contain a clock.xml</string>
    <string name="err_invalid_xml">clock.xml is not valid</string>
    <string name="err_read_error">Error reading file or file is not a zip file</string>
    <string name="err_missing_file">A replaced file is not present in the zip</string>
    <string name="err_import">Import error</string>
    <string name="wrong_device">Wrong device</string>
    <string name="wrong_device_text">The theme you\'ve imported seems to be for the device %1$s, but your device seems to be a %2$s. Please note that themes for the wrong device won\'t work. If this is an error, please contact the author of the theme to fix it.</string>
</resources>
