<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.bigboot.qcthemer.QuickcirclemodSettings">
    <RelativeLayout android:layout_width="match_parent"
        android:id="@+id/layout_root"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/author"
            android:id="@+id/lblAuthor"
            android:textStyle="bold"
            android:layout_toStartOf="@+id/lblDescriptionContent"
            android:gravity="right"
            android:layout_below="@+id/lblTitle"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/lblDescription"
            android:textStyle="bold"
            android:layout_below="@+id/lblAuthor"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/lblDescriptionContent"
            android:layout_alignTop="@+id/lblDescription"
            android:layout_toEndOf="@+id/lblDescription"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/layout_apply" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_apply"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_theme"
                android:id="@+id/button"
                android:visibility="invisible" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/active_theme"
                android:id="@+id/applied"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:gravity="center" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/lblTitle"
            android:gravity="center"
            android:layout_below="@+id/pageIndicator"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/lblAuthorContent"
            android:layout_toRightOf="@+id/lblAuthor"
            android:layout_alignTop="@+id/lblAuthor"
            android:layout_alignParentEnd="true" />

        <android.support.v4.view.ViewPager
            android:layout_width="1046px"
            android:layout_height="1046px"
            android:id="@+id/viewpager"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <com.viewpagerindicator.CirclePageIndicator
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:id="@+id/pageIndicator"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/viewpager"
            app:fillColor="#ff33b5e5"
            app:pageColor="#FF777777"
            app:strokeColor="#FF000000"
            app:strokeWidth="0dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_watchfaces"
        android:id="@+id/lblEmpty"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"/>
</RelativeLayout>
